--- a/Movie Analysis.ipynb
+++ b/Movie Analysis.ipynb
@@ -2274,6 +2274,14 @@
     "top_10_movies"
    ]
   },
+ {
+   "cell_type": "markdown",
+   "id": "51937251",
+   "metadata": {},
+   "source": [
+    "As you can see the above data frame shows the top 10 highest grossing movies between 2019-2020."
+   ]
+  }
   {
    "cell_type": "code",
    "execution_count": 29,
